test/distributions/bradc/assoc/userAssoc-array-noelt.good
userAssoc-array-noelt.chpl:21: error: halt reached - array index out of bounds: 22.0
